refactor: Fix minor linter warnings